# nbs-pods

./: .dockerignore  .gitignore  MANIFEST.in  README.md  docker-compose.build.yml  pyproject.toml
.github/workflows/: build-images.yml  python-publish.yml
compose/bluesky-services/: docker-compose.yml
compose/gui/: docker-compose-x11.yml  docker-compose.development.yml  docker-compose.x11.yml  docker-compose.yml
compose/queueserver/: docker-compose.development.yml  docker-compose.override.yml  docker-compose.yml
compose/sim/: docker-compose.development.yml  docker-compose.override.yml  docker-compose.yml
compose/tes/: docker-compose.override.yml  docker-compose.yml
compose/viewer/: docker-compose.wayland.yml  docker-compose.x11.yml
config/bluesky/: kafka.yml
config/ipython/profile_default/: pixi.toml
config/ipython/profile_default/scripts/: gui-dev.sh  sim-dev.sh  sim-start.sh  viewer-dev.sh  viewer-start.sh
config/ipython/profile_default/startup/: 00-startup.py  beamline.toml  devices.toml  example_load.csv  example_load.toml  gui_config.toml  regions.toml  settings.toml  sim_conf.toml  tes_server.toml  viewer_config.toml
config/pixi/: config.toml
config/tiled/config/: config.yml
config/tiled/profiles/: profile.yml
images/: build_bluesky_image.sh
images/bluesky/: Containerfile  build_bluesky_image.sh
images/conda/: Containerfile
images/gui/: Containerfile
images/nbs/: Containerfile  build_nbs_image.sh
images/queueserver/: Containerfile
images/sim/: Containerfile
images/viewer/: Containerfile
scripts/: build-images.sh  create-beamline-pods.sh  deploy.sh  nbs-pods-lib.sh  nbs-pods.sh
src/nbs_pods/: __init__.py  cli.py  compose.py  config.py  create.py  display.py  services.py
src/nbs_pods/compose/bluesky-services/: docker-compose.yml
src/nbs_pods/compose/bsui/: docker-compose.hold.yml  docker-compose.override.yml  docker-compose.yml
src/nbs_pods/compose/gui/: docker-compose-x11.yml  docker-compose.development.yml  docker-compose.hold.yml  docker-compose.wayland.yml  docker-compose.x11.yml
src/nbs_pods/compose/queueserver/: docker-compose.development.yml  docker-compose.hold.yml  docker-compose.yml
src/nbs_pods/compose/sim/: docker-compose.development.yml  docker-compose.hold.yml  docker-compose.yml
src/nbs_pods/compose/viewer/: docker-compose.development.yml  docker-compose.hold.yml  docker-compose.wayland.yml  docker-compose.x11.yml
src/nbs_pods/config/ipython/profile_default/: pixi.toml
src/nbs_pods/config/ipython/profile_default/scripts/: gui-start.sh  qs-dev.sh  qs-start.sh  sim-dev.sh  sim-start.sh
src/nbs_pods/config/ipython/profile_default/startup/: beamline.toml  devices.toml  existing_plans_and_devices.yaml  gui_config.toml  regions.toml  sim_conf.toml  viewer_config.toml  xas_queue.csv
src/nbs_pods/images/bluesky/: Containerfile
src/nbs_pods/images/gui/: Containerfile
src/nbs_pods/templates/: .gitignore  MANIFEST.in  README.md  pyproject.toml
src/nbs_pods/templates/src/beamline-pods/config/ipython/profile_default/startup/: beamline.toml
src/nbs_pods/templates/src/beamline_pods/: deploy.py
templates/beamline-pods/: README.md
templates/beamline-pods/config/ipython/profile_default/startup/: devices.toml
templates/beamline-pods/scripts/: deploy.sh  services.sh
