[project]
name = "nbs-pods"
dynamic = ["version"]
description = "Containerized NBS (NIST Beamline Software) services for beamline simulation"
readme = "README.md"
requires-python = ">=3.8"
dependencies = []

[project.scripts]
nbs-pods = "nbs_pods.cli:main"
nbs-pods-create = "nbs_pods.create:main"

[build-system]
requires = ["setuptools>=61.0", "wheel", "setuptools-scm[toml]>=8"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
namespaces = true
exclude = ["nbs_pods.templates*"]

[tool.setuptools.package-data]
nbs_pods = [
    "compose/**/*",
    "config/**/*",
    "templates/**/*",
]

[tool.pixi.project]
name = "nbs-pods"
channels = ["conda-forge"]
platforms = ["linux-64"]
description = "Containerized NBS (NIST Beamline Software) services for beamline simulation"

[tool.pixi.dependencies]
podman-compose = "*"
python = ">=3.8"
ipython = "*"
pip = "*"

[tool.pixi.pypi-dependencies]
nbs-pods = { path = ".", editable = true }


[tool.pixi.tasks]
start = "nbs-pods start"
stop = "nbs-pods stop"
demo = "nbs-pods demo"
list = "nbs-pods list"
create = "nbs-pods-create"

