[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "nbs-pods"
authors = [
    {name = "Charles Titus", email = "ctitus@bnl.gov"},
]
requires-python = ">=3.8"
description = "Containerized NBS (NIST Beamline Software) services for beamline simulation"
dynamic = ["version"]
readme = "README.md"
keywords = ["bluesky", "nsls-ii", "beamline", "containers", "podman"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: Public Domain",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
]
dependencies = []

[project.scripts]
nbs-pods = "nbs_pods.cli:main"
nbs-pods-create = "nbs_pods.create:main"

[project.urls]
homepage = "https://github.com/xraygui/nbs-pods"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build]
skip-excluded-dirs = true

[tool.hatch.build.targets.sdist]
exclude = [
    "src/nbs_pods/config/ipython/profile_default/.pixi/**",
    "**/history.sqlite",
    "**/*.log",
]

[tool.hatch.build.targets.wheel]
packages = ["src/nbs_pods"]
exclude = [
    "src/nbs_pods/config/ipython/profile_default/.pixi/**",
    "**/history.sqlite",
    "**/*.log",
]

[tool.pixi.project]
name = "nbs-pods"
channels = ["conda-forge"]
platforms = ["linux-64"]
description = "Containerized NBS (NIST Beamline Software) services for beamline simulation"

[tool.pixi.dependencies]
podman-compose = "*"
python = ">=3.8"
ipython = "*"
pip = "*"

[tool.pixi.pypi-dependencies]
nbs-pods = { path = ".", editable = true }

[tool.pixi.feature.build.dependencies]
hatch = "*"

[tool.pixi.feature.build.tasks]
build = "hatch build"

[tool.pixi.environments]
build = { features = ["build"], solve-group = "default" }

[tool.pixi.tasks]
start = "nbs-pods start"
stop = "nbs-pods stop"
demo = "nbs-pods demo"
list = "nbs-pods list"
create = "nbs-pods-create"
